Add logging dependencies to parent pom with test scope Remove deprecated -XX:MaxPermSize=256m option from parent pom Update OWLAPI version to 4.5.6 to remove Guice dependency warnings